Feat: Adds styling for other cards and finalizes overall styling of site

--- a/shopping-layout/index.html
+++ b/shopping-layout/index.html
@@ -31,7 +31,7 @@
                     <p class="shoe-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis,
                         quis officiis quam impedit
                         incidunt animi, numquam unde, saepe in consequuntur ipsum quo ab perspiciatis. Adipisci officia
-                        obcaecati provident eveniet odio...</p>
+                        obcaecati provident eveniet...</p>
                 </div>
                 <div class="price-and-buy-wrapper">
                     <div class="price">
@@ -67,9 +67,100 @@
             </article>
             <!---Shoe two-->
             <article class="shoe shoe2">
+                <div class="picture">
 
+                    <div class="photographer-info">
+                        <p>Photo by: Daniel Storek</p>
+                    </div>
+                </div>
+                <div class="article-description-wrapper">
+                    <h2 class="shoe-name">Adidas</h2>
+                    <p class="shoe-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis,
+                        quis officiis quam impedit
+                        incidunt animi, numquam unde, saepe in consequuntur ipsum quo ab perspiciatis. Adipisci officia
+                        obcaecati provident eveniet...</p>
+                </div>
+                <div class="price-and-buy-wrapper">
+                    <div class="price">
+                        <p class="price-text">$30 USD</p>
+                    </div>
+                    <div class="size-quant">
+                        <div class="size-wrapper">
+                            <label for="size">Size:</label>
+                            <select name="size-dropdown" id="size" class="size">
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                            </select>
+                        </div>
+                        <div class="quant-wrapper">
+                            <label for="quant">Quantity:</label>
+                            <select name="quant-dropdown" id="quant" class="quant-drop">
+                                <option value="6  ">1</option>
+                                <option value="7  ">2</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="color">
+                        <label class="color-select" for="color">Color</label>
+                        <input type="radio" name="color" id="color1" class="color-radial s2-color1" value="s2-color1">
+                        <input type="radio" name="color" id="color2" class="color-radial s2-color2" value="s2-color2">
+                        <input type="radio" name="color" id="color2" class="color-radial s2-color3" value="s2-color3">
+
+                    </div>
+                    <button class="add-to-cart" type="button">
+                        Add to Cart
+                    </button>
+                </div>
             </article>
-            <article class="shoe shoe3">shoe 3 PH</article>
+            <!---Shoe three-->
+            <article class="shoe shoe3">
+                <div class="picture">
+                    <div class="alert-badge">
+                        <p class="alert-text">Just One left!</p>
+                    </div>
+                    <div class="photographer-info">
+                        <p>Photo by: felipepelaquim</p>
+                    </div>
+                </div>
+                <div class="article-description-wrapper">
+                    <h2 class="shoe-name">New Balance</h2>
+                    <p class="shoe-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis,
+                        quis officiis quam impedit
+                        incidunt animi, numquam unde, saepe in consequuntur ipsum quo ab perspiciatis. Adipisci officia
+                        obcaecati provident eveniet...</p>
+                </div>
+                <div class="price-and-buy-wrapper">
+                    <div class="price">
+                        <p class="price-text">$45 USD</p>
+                    </div>
+                    <div class="size-quant">
+                        <div class="size-wrapper">
+                            <label for="size">Size:</label>
+                            <select name="size-dropdown" id="size" class="size">
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                            </select>
+                        </div>
+                        <div class="quant-wrapper">
+                            <label for="quant">Quantity:</label>
+                            <select name="quant-dropdown" id="quant" class="quant-drop">
+                                <option value="6  ">1</option>
+                                <option value="7  ">2</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="color">
+                        <label class="color-select" for="color">Color</label>
+                        <input type="radio" name="color" id="color1" class="color-radial s3-color1" value="s3-color1">
+                        <input type="radio" name="color" id="color2" class="color-radial s3-color2" value="s3-color2">
+
+
+                    </div>
+                    <button class="add-to-cart" type="button">
+                        Add to Cart
+                    </button>
+                </div>
+            </article>
 
         </section>
     </main>
