Refactor: Improves html semantics

--- a/shopping-layout/index.html
+++ b/shopping-layout/index.html
@@ -15,25 +15,25 @@
 
 <body>
     <main>
-        <section class="content-wrapper">
+        <div class="content-wrapper">
             <!---Shoe one-->
             <article class="shoe shoe1">
-                <div class="picture">
+                <section class="picture">
                     <div class="alert-badge">
                         <p class="alert-text">Free Shipping!</p>
                     </div>
                     <div class="photographer-info">
                         <p>Photo by: Maksim Larin</p>
                     </div>
-                </div>
-                <div class="article-description-wrapper">
+                </section>
+                <section class="article-description-wrapper">
                     <h2 class="shoe-name">Asics</h2>
                     <p class="shoe-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis,
                         quis officiis quam impedit
                         incidunt animi, numquam unde, saepe in consequuntur ipsum quo ab perspiciatis. Adipisci officia
                         obcaecati provident eveniet...</p>
-                </div>
-                <div class="price-and-buy-wrapper">
+                </section>
+                <section class="price-and-buy-wrapper">
                     <div class="price">
                         <p class="price-text">$65 USD</p>
                     </div>
@@ -63,24 +63,24 @@
                     <button class="add-to-cart" type="button">
                         Add to Cart
                     </button>
-                </div>
+                </section>
             </article>
             <!---Shoe two-->
             <article class="shoe shoe2">
-                <div class="picture">
+                <section class="picture">
 
                     <div class="photographer-info">
                         <p>Photo by: Daniel Storek</p>
                     </div>
-                </div>
-                <div class="article-description-wrapper">
+                </section>
+                <section class="article-description-wrapper">
                     <h2 class="shoe-name">Adidas</h2>
                     <p class="shoe-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis,
                         quis officiis quam impedit
                         incidunt animi, numquam unde, saepe in consequuntur ipsum quo ab perspiciatis. Adipisci officia
                         obcaecati provident eveniet...</p>
-                </div>
-                <div class="price-and-buy-wrapper">
+                </section>
+                <section class="price-and-buy-wrapper">
                     <div class="price">
                         <p class="price-text">$30 USD</p>
                     </div>
@@ -110,26 +110,26 @@
                     <button class="add-to-cart" type="button">
                         Add to Cart
                     </button>
-                </div>
+                </section>
             </article>
             <!---Shoe three-->
             <article class="shoe shoe3">
-                <div class="picture">
+                <section class="picture">
                     <div class="alert-badge">
                         <p class="alert-text">Just One left!</p>
                     </div>
                     <div class="photographer-info">
                         <p>Photo by: felipepelaquim</p>
                     </div>
-                </div>
-                <div class="article-description-wrapper">
+                </section>
+                <section class="article-description-wrapper">
                     <h2 class="shoe-name">New Balance</h2>
                     <p class="shoe-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis,
                         quis officiis quam impedit
                         incidunt animi, numquam unde, saepe in consequuntur ipsum quo ab perspiciatis. Adipisci officia
                         obcaecati provident eveniet...</p>
-                </div>
-                <div class="price-and-buy-wrapper">
+                </section>
+                <section class="price-and-buy-wrapper">
                     <div class="price">
                         <p class="price-text">$45 USD</p>
                     </div>
@@ -159,10 +159,9 @@
                     <button class="add-to-cart" type="button">
                         Add to Cart
                     </button>
-                </div>
+                </section>
             </article>
-
-        </section>
+        </div>
     </main>
 </body>
 
